--- a/.github/workflows/plagiarism-check.yml
+++ b/.github/workflows/plagiarism-check.yml
@@ -46,21 +46,29 @@ jobs:
       - name: Format and post response
         run: |
           response="$(cat results.txt)"
-          formatted_response="## Plagiarism Check Results: <br> <br>"
+          formatted_response="## Plagiarism Check Results:
+          "
 
           plagiarismPercent=$(echo "$response" | jq -r '.plagiarismPercent')
-          formatted_response+="### Plagiarism Percentage: $plagiarismPercent% <br> <br>"
+          formatted_response+="### $plagiarismPercent% plagiarism detected 
+          "
 
           results=$(echo "$response" | jq -r '.results')
           if [ "$results" != "None" ]; then
-              # Iterate over each result and format it
-              while IFS= read -r result; do
-                  title=$(echo "$result" | jq -r '.title')
-                  link=$(echo "$result" | jq -r '.link')
-                  formatted_response+="* [$title]($link)<br> <br>"
-              done <<< "$results"
+            while IFS= read -r result; do
+              sentence=$(echo "$result" | jq -r '.sentence')
+              formatted_response+=" Sentence: $sentence
+              "
+              matches=$(echo "$result" | jq -c '.matches')
+              while IFS= read -r match; do
+                title=$(echo "$match" | jq -r '.title')
+                link=$(echo "$match" | jq -r '.link')
+                formatted_response+="[$title]($link)
+                "
+              done <<< "$(echo "$matches" | jq -c '.[]')"
+            done <<< "$(echo "$results" | jq -c '.[]')"
           else
-              formatted_response+="## No plagiarism detected."
+            formatted_response+="### No plagiarism detected."
           fi
 
           gh pr comment "${{ github.event.issue.number }}" --body "$formatted_response"
