--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
       // Rebuild the container if it already exists to update.
       "VERSION": "latest",
       // Update NODE_VERSION to pick the Node.js version: 12, 14
-      "NODE_VERSION": "18"
+      "NODE_VERSION": "20"
     }
   },
 
@@ -26,7 +26,7 @@
       },
 
       // Add the IDs of extensions you want installed when the container is created.
-      "extensions": ["bungcip.better-toml", "davidanson.vscode-markdownlint"]
+      "extensions": []
     }
   },
 
