--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -1,7 +1,7 @@
 ---
 languageCode: "en-us"
 title: "Distributed Networks Institute"
-theme: "hugo-book"
+theme: "archie"
 
 # Book configuration
 disablePathToLower: true
