--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-book"]
-	path = themes/hugo-book
-	url = https://github.com/alex-shpak/hugo-book
+[submodule "themes/archie"]
+	path = themes/archie
+	url = https://github.com/athul/archie.git
