--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,9 @@
 # Below are the code owners for this repository. Their approval is required to make any changes.
 
-# Someone from the Infrastructure Team needs to approve all changes
 *       @1712n/dni-infrastructure
 
-# Someone from the Crypto Attack Wiki Team needs to approve changes to the Crypto Attack Wiki
-/content/attacks/    @1712n/crypto-attack-wiki-team
+/content/cyberattacks/    @1712n/crypto-attack-wiki-team
+
+/content/ai/    @11712n/dni-nlp-team
+
+/content/market-health/    @11712n/dni-market-health-team
