--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ tenacity = "^8.2.3"
 matplotlib = "3.6.0"
 pandas = "2.0.1"
 bleach = "^6.1.0"
+cohere = "^4.43"
 
 [tool.poetry.scripts]
 payout-calc = "tools.payout_calc.payout_calc:main"
