fix action name

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -64,7 +64,8 @@ jobs:
           HUGO_ENV: production
         run: hugo --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-artifact@v4
+
         with:
           path: ./public
 
